# metadata-service

./: .env  README.md  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  lineage.py  main.py  models.py  schemas.py
app/api/: datasets.py  lineage.py  search.py
